--- a/android-gif-drawable/build.gradle
+++ b/android-gif-drawable/build.gradle
@@ -44,6 +44,7 @@ android {
 
 dependencies {
     implementation "pl.droidsonroids.relinker:relinker:$versions.relinker"
+    api 'jp.co.cyberagent.android:gpuimage:2.1.0'
     compileOnly "androidx.annotation:annotation:$versions.androidxAnnotations"
     testCompileOnly "androidx.annotation:annotation:$versions.androidxAnnotations"
     testImplementation "junit:junit:$versions.junit"
